--- a/abc_comprehensivecba_appendix-pub.tex
+++ b/abc_comprehensivecba_appendix-pub.tex
@@ -2,6 +2,10 @@
 \input{preambleappendix} 
 \input{output/mainstatistics}
 
+\usepackage{verbatim}
+\usepackage{smartdiagram}
+\usepackage{rotating}
+
 \newcommand{\orth}{\ensuremath{\perp\!\!\!\perp}}%
 \newcommand{\indep}{\orth}%
 \newcommand{\notorth}{\ensuremath{\perp\!\!\!\!\!\!\diagup\!\!\!\!\!\!\perp}}%
