--- a/Appendices/Health/data.tex
+++ b/Appendices/Health/data.tex
@@ -1,4 +1,5 @@
 \subsection{Data Sources} \label{section:data}
+
 \noindent FAM uses data from ABC/CARE follow-up surveys to set the initial state of the cohort.
 The transition model parameters are estimated from the 1997 to 2013 waves of the Panel Study of Income Dynamics (PSID).
 We supplement the PSID with data from the Health and Retirement Study (HRS). We use the National Health and Nutrition Examination Survey (NHANES)
@@ -55,7 +56,7 @@ services, sources of medical payments, and body weight and height. Each year the
 includes approximately 12,000 households, or 34,000 individuals. Sample size for those aged 25-64 is
 about 15,800 in each year. MEPS has comparable measures of socioeconomic status as those in PSID,
 including age, race and ethnicity, educational attainment, census region, and marital status. We estimate medical expenditure
-and utilization using data from 2008 to 2010. We use waves from 2001 to 2003 to estimate models of quality-adjusted life years (QALYs), due to availability of EQ-5D instrument in these waves.\footnote{Section \ref{section:FAM_models} explains the estimation of the QALY model.}
+and utilization using data from 2008 to 2010. We use waves from 2001 to 2003 to estimate models of quality-adjusted life years (QALYs), due to availability of EQ-5D instrument in these waves.\footnote{Section \ref{section:qalys} explains the estimation of the QALY model.}
 
 
 \subsubsection{NHANES}
@@ -131,7 +132,7 @@ SSI claiming affects FAM transitions in employment status.
 Lastly, claiming Social Security retirement benefits affects FAM transitions in employment status and insurance category.
 The ABC age-30 subject interview has a single yes/no question about claiming which asks: ``Currently are you receiving income from workman's compensation, disability, or Social Security benefits including Supplemental Security Income?'' CARE asks a similar question. The PSID has separate questions for each benefit type. We use a multinomial logit model to estimate the joint probability of each combination of DI and SSI claiming. The estimation uses PSID respondents aged 25 to 35 who were claiming at least one of the following benefits: workman's compensation, DI, or SSI. A Monte Carlo random draw generated from this distribution is used to assign each ABC/CARE subject's DI- and SSI-claiming status at the start of the simulation. One ABC subject is missing data about whether or not they were claiming and was assumed to not be claiming any benefits.
 
-\noindent As discussed in Section \ref{section:FAM_models}, FAM uses different models to estimate medical costs depending on whether or not a subject is Medicare-eligible. Subjects can enroll in Medicare before the age of 65 if they are claiming DI. The cost estimates for Medicare-eligible subjects depend on the subjects' current disease status at the age-30 interview and their disease status two years prior to the interview. Unfortunately, ABC/CARE does not have disease data two years before the age-30 interview. It is assumed that all subjects do not have their disease conditions in the previous period.
+\noindent As discussed in Section \ref{section:qalys}, FAM uses different models to estimate medical costs depending on whether or not a subject is Medicare-eligible. Subjects can enroll in Medicare before the age of 65 if they are claiming DI. The cost estimates for Medicare-eligible subjects depend on the subjects' current disease status at the age-30 interview and their disease status two years prior to the interview. Unfortunately, ABC/CARE does not have disease data two years before the age-30 interview. It is assumed that all subjects do not have their disease conditions in the previous period.
 
 
 
