--- a/Appendices/Health.tex
+++ b/Appendices/Health.tex
@@ -2,17 +2,13 @@
 
 \noindent \textbf{[JJH: The last battle zone!] [JLG: I am starting to think that this last battle will kill me.]}\\
 
-\noindent \textbf{[JLG: I have reworked this version, based on your comments. This document represents \textit{what we do} in our empirical analysis, after checking everything with Duncan. Please comment on what you think is wrong and I can talk to you about potential solutions and the feasibility of implementing them. I have gotten rid of a lot of the extensive verbal introduction and many other verbal details that now have become schematic and clear with the big tables created to complement the formal section.]} 
-
-\textbf{[JLG: I still jotted down your questions from the edits yesterday throughout the document and answers to them.]}
+\noindent \textbf{[JLG: I have reworked this version, based on your comments and on my conversations with Bryan and Duncan. I have gotten rid of a lot of the extensive verbal introduction and many other verbal details that now have become schematic and clear with the presentation of what we estimate and the big tables that I generated.]}
 
 Our methodology to forecast and monetize health outcomes is a generalization of what we do in Section~\ref{section:cbamethodology}. When studying labor income, a first-order autoregressive model is a helpful device to simplify a complex reality and produce forecasts. As it turns out, in the paper we find that model to perform well under a variety of testable implications. 
 
 When studying health, a generalization is needed because there is abundant state interdependency in health outcomes. We use a dynamic microsimulation model (the Future Adult Model - FAM) as laboratory to estimate health-state transitions and other health and economic outcomes. With this estimation in hand, we forecast the health trajectories of the ABC/CARE individuals. In Section~\ref{section:cbamethodology}, we initialize the forecast of labor income using labor income at age 21. In this appendix, we use a ABC/CARE rich age-30 interview and a health follow-up conducted when the subjects were in their mid-30s to initialize the forecast of the health trajectory. We then monetize health outcomes using quality-adjusted life years and medical costs.\footnote{This microsimulation model is an extension of the model used by \citet{Prados_etal_2015_How-Much-Can-Education}; the technical details are described in \citet{Goldman_etal_2015_Future-Adult-Model}. Both models are related to the Future Elderly Model (FEM), which is a microsimulation tool originally developed to examine the health and health care costs among the elderly Medicare population \citep{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}. It has been used extensively to assess health and disease prevention scenarios: FEM has been used to assess the future costs of disease, the benefits of preventing disease among older population, the consequences of new medical technologies, trends in disability, and the fiscal consequences of worsening population health (see \citet{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}, \citet{Lakdawalla_etal_2004_Health-and-Cost}, \citet{Goldman_etal_2005_HA}, and \citet{Zissimopoulos_etal_2014_Delaying-Alzheimers}). The main differences with FEM are that the model we use starts with cohorts of individuals at age 30 instead of 50, and that it simulates more outcomes than FEM, because they are important to explain health outcomes and medical expenditure at younger ages, like evolution of partnership and marital status, work status, and family size.}
 
 \noindent Before providing formal details, we summarize the data sets used, as well as variable construction and imputation assumptions.
-
-\textbf{[JJH: Can we create an schematic? List what is categorized, etc.? We need to show exactly how these parts feed together + what we add?] [JLG: Yes. Please note that I got rid of Background. Background was a verbal synthesis of what we anyway explain again. Once we provide the transition models, I am providing tables that classify each state or health or other outcome and how it related to the rest. Again, in what we currently do.]}
 
 \input{Appendices/Health/data.tex}
 \input{Appendices/Health/method_analysis.tex}
