--- a/Appendices/Health/validation.tex
+++ b/Appendices/Health/validation.tex
@@ -1,7 +1,6 @@
 \subsection{Model Validation}
 \label{appendix:health-validation}
-\noindent To evaluate the performance of the full version of the FAM model, we validate it using various techniques.
-%including comparing model results from early years with actual data available for later years.\footnote{\citet{Goldman_etal_2015_Future-America-Model}.}
+\noindent We provide some basic validation details to inform the reader on the performance on the full version of the FAM model, material which we replicate from \citet{Goldman_etal_2015_Future-Adult-Model}.
 
 \subsubsection{Cross-validation}
 \noindent Our cross-validation tests randomly sample half of the PSID respondent IDs for use in estimating the transition models. The respondents not used for estimation, but who were present in the PSID sample in 1999, are then simulated from 1999 through 2013. Demographic, health, and economic outcomes are compared for the simulated (FAM) and actual (PSID) populations.
