--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -37,9 +37,9 @@ transition in log(BMI). We allow for state-dependence by including the lagged ou
 \item \textbf{Categorical models, but without an ordering.} Multiple threshold models without an order (e.g., labor force status is categorized as out of labor force, unemployed, working part time, or working full time).
 \end{enumerate}
 
-Estimation of the parameters characterizing these outcomes is also performed separately. he economic outcomes that we include are labor income, for which we use the forecast detailed in Section~\ref{section:cbamethodology}, and three additional economic outcomes which we list and briefly explain their forecast. 
+Estimation of the parameters characterizing these outcomes is also performed separately. The economic outcomes that we include are labor income, for which we use the forecast detailed in Section~\ref{section:cbamethodology}, and three additional economic outcomes which we list and briefly explain their forecast. 
 
-Tables~\ref{table:supertab1} to~\ref{table:supertab3} list the variables determining each of the states and health and economic outcomes that we consider. For each of these we list: (1) its classification---e.g., absorbing state, binary outcome, continuous outcome; (2) initial states allowed to determine it---$\tilde{\bm{D}}_0$ in Equation~\eqref{eq:trans}; (3) lagged health states allowing to determine it---$\tilde{\bm{D}}_{a-1}$ in Equation~\eqref{eq:trans}; (4) other health and economic outcomes allowing to determine it---$\bm{W}_a$ in Equation~\eqref{eq:trans}; (5) background variables allowing to determine it---$\bm{B}$ in Equation~\eqref{eq:trans}. From this information, the reader can understand the type of outcome being model, its classification, as well determinants and their categorization according with Equation~\eqref{eq:trans}. The outcomes that help predict each other are based on research and advice of clinicians, as explained and justified in \citet{Goldman_etal_2015_Future-Elderly-Model-Report}.
+Tables~\ref{table:supertab1} to~\ref{table:supertab3} list the variables determining each of the states and health and economic outcomes that we consider. For each of these we list: (1) its classification---e.g., absorbing state, binary outcome, continuous outcome; (2) initial states used to determine the outcome of interest---$\tilde{\bm{D}}_0$ in Equation~\eqref{eq:trans}; (3) lagged health states used to determine the outcome of interest---$\tilde{\bm{D}}_{a-1}$ in Equation~\eqref{eq:trans}; (4) other health and economic outcomes used to determine the outcome of interest---$\bm{W}_a$ in Equation~\eqref{eq:trans}; and (5) background variables---$\bm{B}$ in Equation~\eqref{eq:trans}. From this information, the reader can understand the type of outcome being model, its classification, as well determinants and their categorization according with Equation~\eqref{eq:trans}. The outcomes that help predict each other are based on research and advice of clinicians, as explained and justified in \citet{Goldman_etal_2015_Future-Elderly-Model-Report}.
 
 % ABSORBING STATES
 \begin{sidewaystable}[htbp!]
@@ -293,7 +293,7 @@ Medical Costs & ? & Childhood Medical Costs & Heart Disease & Psychological Dist
 
 We predict a QALY model based on the EQ-5D instrument, a widely-used, health-related quality-of-life (HRQoL) measure. The scoring system for EQ-5D was first developed using a U.K. sample\footnote{\citet{Dolan_1997_Modeling_MC}.} Later, a scoring system based on a U.S. sample was generated.\footnote{\citet{Shaw_etal_2005_EQ5D_MC}.} The PSID does not ask the appropriate questions for computing EQ-5D, but the MEPS does. We forecast EQ-5D scores from the MEPS onto the PSID data using common measures between the MEPS and PSID. We map EQ-5D scores from the MEPS onto PSID data using common variables between the MEPS and PSID. We then run a linear regression of EQ-5D on PSID variables that are transitioned in FAM (including ADL counts, IADL counts, and diseases).\footnote{The main variables in this prediction are self-reported health and requiring help with ADLs.} The microsimulation uses this linear regression to compute QALYs.
 
-\noindent Also based on a version of Equation~\eqref{eq:trans}, we predict and then forecast medical cost models. For individuals who are not Medicare-eligible, the cost models are estimated from MEPS data. Once an individual becomes Medicare-eligible, their costs are estimated from MCBS data. Both sets of models include the following covariates: age, gender, race and ethnicity, education level, relationship status, disease conditions, and labor income. The MEPS models also include type of health insurance as a covariate. Because MCBS follows respondents for more than two years (the time step length in the FAM simulation), the FAM cost models for the Medicare-eligible population include covariates for the stage of each disease. In the initial stage, a patient has a diagnosis in the current two-year period, but did not have the diagnosis in the previous two-year period. Then, in the maintenance stage, a patient had a diagnosis in the previous two-year period and survives with the diagnosis in the current two-year period (all disease states are absorbing---it is impossible to transition out of a diagnosis). Finally, in the terminal stage, a patient has a diagnosis and dies in the current two-year period. The medical costs models underestimate health care spending reported in the National Healthcare Expenditures Account (NHEA) data, due in part to underreporting of Medical costs in MEPS.
+\noindent Also based on a version of Equation~\eqref{eq:trans}, we predict and then forecast medical cost models. For individuals who are not Medicare-eligible, the cost models are estimated from MEPS data. Once an individual becomes Medicare-eligible, their costs are estimated from MCBS data. Both sets of models include the following covariates: age, gender, race and ethnicity, education level, relationship status, disease conditions, and labor income. The MEPS models also include type of health insurance as a covariate. Because MCBS follows respondents for more than two years (the time step length in the FAM simulation), the FAM cost models for the Medicare-eligible population and includes covariates for the stage of each disease. In the initial stage, a patient has a diagnosis in the current two-year period, but did not have the diagnosis in the previous two-year period. Then, in the maintenance stage, a patient had a diagnosis in the previous two-year period and survives with the diagnosis in the current two-year period (all disease states are absorbing---it is impossible to transition out of a diagnosis). Finally, in the terminal stage, a patient has a diagnosis and dies in the current two-year period. The medical costs models underestimate health care spending reported in the National Healthcare Expenditures Account (NHEA) data, due in part to underreporting of Medical costs in MEPS.
 %
 %\subsubsection{Inverse Hyperbolic Sine Transformation}
 %One problem fitting the wealth distribution is that it has a long right tail and some negative values. We use a
